--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -3,47 +3,41 @@ on:
   schedule:
     - cron: '0 0 * * *' # UTC时间每天0点
   push:
-    branches: [ main ]
-
+    branches: [main]
 env:
   TZ: Asia/Shanghai
   JEKYLL_ENV: production
-
 jobs:
   build:
     runs-on: ubuntu-latest
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build  # 确保build作业完成后再部署
     steps:
       - uses: actions/checkout@v4
-
+        
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.1
           bundler-cache: true
-
+        
       - uses: actions/cache@v3
         with:
           path: |
             vendor/bundle
             .jekyll-cache
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-
+        
       - uses: actions/jekyll-build-pages@v1
         with:
           source: ./
           destination: ./_site
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build  # 确保build作业完成后再部署
+    steps:
+      - uses: actions/checkout@v4
       - uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           publish_dir: ./_site
-
-      - name: Cache Ruby Gems
-        uses: actions/cache@v2
-        with:
-          path: vendor/ruby
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
