--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -3,41 +3,45 @@ on:
   schedule:
     - cron: '0 0 * * *' # UTC时间每天0点
   push:
-    branches: [main]
+    branches: [ main ]
+
 env:
   TZ: Asia/Shanghai
   JEKYLL_ENV: production
+
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        
+
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.1
           bundler-cache: true
-        
+
       - uses: actions/cache@v3
         with:
           path: |
             vendor/bundle
             .jekyll-cache
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-        
+
       - uses: actions/jekyll-build-pages@v1
         with:
           source: ./
           destination: ./_site
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build  # 确保build作业完成后再部署
-    steps:
-      - uses: actions/checkout@v4
-      - uses: peaceiris/actions-gh-pages@v3
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: site
+          path: ./_site
+
+      - name: Deploy to GH Pages
         if: github.ref == 'refs/heads/main'
+        uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           publish_dir: ./_site
