Jekyll Site CI/CD

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,28 +1,37 @@
 name: Jekyll Site CI/CD
 
-# 触发条件
+# 触发条件优化
 on:
   schedule:
-    # 使用更清晰的注释说明时间
-    - cron: '0 0 * * *'  # 每天 UTC 00:00 运行（北京时间 08:00）
+    - cron: '0 */12 * * *'  # 每12小时运行一次，减少资源消耗
   push:
     branches: 
-      - main
-      - develop  # 添加开发分支支持
-  # 添加手动触发支持
+      - master  # 修改为 master 分支
+      - develop
+    paths-ignore:      # 不再忽略 .md 文件
+      - 'docs/**'
+      - '.gitignore'
   workflow_dispatch:
+    inputs:
+      environment:
+        description: '部署环境'
+        required: true
+        default: 'production'
+        type: choice
+        options:
+          - production
+          - staging
 
-# 环境变量配置
 env:
   TZ: Asia/Shanghai
-  JEKYLL_ENV: production
-  RUBY_VERSION: '3.1'  # 将 Ruby 版本提取为变量
+  JEKYLL_ENV: ${{ github.event.inputs.environment || 'production' }}
+  RUBY_VERSION: '3.1'
+  NODE_VERSION: '16'
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     
-    # 添加并发控制，避免同时运行多个工作流
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: true
@@ -31,7 +40,8 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 1  # 优化克隆深度
+          fetch-depth: 1
+          lfs: true  # 支持 Git LFS
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
@@ -39,7 +49,7 @@ jobs:
           ruby-version: ${{ env.RUBY_VERSION }}
           bundler-cache: true
 
-      # 优化缓存配置
+      # 优化的缓存策略
       - name: Cache Dependencies
         uses: actions/cache@v3
         with:
@@ -47,39 +57,50 @@ jobs:
             vendor/bundle
             .jekyll-cache
             _site
-          key: ${{ runner.os }}-jekyll-${{ hashFiles('**/Gemfile.lock') }}
+            node_modules
+          key: ${{ runner.os }}-jekyll-${{ hashFiles('**/Gemfile.lock', '**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-jekyll-
 
+      - name: Install Dependencies
+        run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
+          
       - name: Build Jekyll Site
-        uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./
-          destination: ./_site
-        
-      # 添加构建产物验证
-      - name: Verify Build
+        run: |
+          bundle exec jekyll build --trace
+        env:
+          JEKYLL_ENV: ${{ env.JEKYLL_ENV }}
+
+      - name: Verify and Test Build
         run: |
           if [ ! -d "_site" ]; then
-            echo "Build failed - _site directory not found"
+            echo "构建失败 - _site 目录未找到"
             exit 1
           fi
+          # 检查关键文件
+          for file in index.html 404.html; do
+            if [ ! -f "_site/$file" ]; then
+              echo "错误：$file 未生成"
+              exit 1
+            fi
+          done
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: site-${{ github.sha }}  # 添加提交哈希便于追踪
+          name: site-${{ github.sha }}
           path: ./_site
-          retention-days: 7  # 设置保留时间
+          retention-days: 7
 
       - name: Deploy to GitHub Pages
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/master' && env.JEKYLL_ENV == 'production'  # 修改为 master 分支
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           publish_dir: ./_site
-          # 添加部署相关配置
-          commit_message: "Deploy: ${{ github.event.head_commit.message }}"
+          commit_message: "部署: ${{ github.event.head_commit.message || 'Manual deployment' }}"
           full_commit_message: ${{ github.event.head_commit.message }}
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
