--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -92,7 +92,7 @@ jobs:
           done
 
       - name: Upload Artifact
-        uses: actions/upload-artifact@latest
+        uses: actions/upload-artifact@v3
         with:
           name: site-${{ github.sha }}
           path: ./_site
