Keming Zhang'Lab

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Keming Zhang / Academic HomePage"
+title                    : "Keming Zhang'Lab / Academic HomePage"
 title_separator          : "-"
 name                     : &name "Keming Zhang"
 description              : &description "personal description"
